--- a/network/ftp.html
+++ b/network/ftp.html
@@ -47,20 +47,18 @@
                 </div>
                 <h2>Tipos de conexión FTP</h2>
                 <p>Existen dos tipos principales de conexiones FTP:</p>
-                <ul style="list-style-type: circle;">
-                    <li>FTP sin cifrar (FTP no seguro): Esta es la forma más antigua y básica de FTP. Los datos se transfieren en texto claro, lo que significa que son susceptibles a la interceptación y lectura por parte de terceros. Como resultado, este método ha sido desplazado por opciones más seguras, especialmente cuando se manejan datos confidenciales.</li>
-                    <li>FTPS (FTP Seguro): Es una versión segura del FTP que utiliza una capa de seguridad SSL/TLS para cifrar los datos durante la transferencia. Esto garantiza que los datos sean confidenciales y protegidos contra posibles ataques de terceros.</li>
-                </ul>
+                <p><marcador class="resaltado2">FTP sin cifrar (FTP no seguro):</marcador> Esta es la forma más antigua y básica de FTP. Los datos se transfieren en texto claro, lo que significa que son susceptibles a la interceptación y lectura por parte de terceros. Como resultado, este método ha sido desplazado por opciones más seguras, especialmente cuando se manejan datos confidenciales.</p>
+                <p><marcador class="resaltado2">FTPS (FTP Seguro):</marcador> Es una versión segura del FTP que utiliza una capa de seguridad SSL/TLS para cifrar los datos durante la transferencia. Esto garantiza que los datos sean confidenciales y protegidos contra posibles ataques de terceros.</p>
                 <div class="blog-image">
                     <img src="media/ftp2.jpg" alt="">
                 </div>
                 <h2>Aplicaciones</h2>
                 <p>El FTP ha sido ampliamente utilizado en diversas aplicaciones y escenarios, como:</p>
-                <ul style="list-style-type: circle;">
-                    <li>Administración de sitios web: Es común utilizar FTP para cargar y administrar archivos en servidores web, lo que permite actualizar y mantener sitios web de manera eficiente.</li>
-                    <li>Intercambio de archivos: Las empresas y organizaciones utilizan FTP para compartir documentos y archivos internamente o con socios y clientes.</li>
-                    <li>Descarga de software: Muchos programas y actualizaciones de software se distribuyen mediante servidores FTP, lo que permite a los usuarios descargar los archivos necesarios de forma rápida y segura.</li>
-                    <li>Copia de seguridad de datos: Las copias de seguridad y restauraciones de datos pueden realizarse utilizando FTP para transferir grandes volúmenes de información de manera confiable.</li>
+                <ul>
+                    <li><marcador class="resaltado18">Administración de sitios web:</marcador> Es común utilizar FTP para cargar y administrar archivos en servidores web, lo que permite actualizar y mantener sitios web de manera eficiente.</li>
+                    <li><marcador class="resaltado18">Intercambio de archivos:</marcador> Las empresas y organizaciones utilizan FTP para compartir documentos y archivos internamente o con socios y clientes.</li>
+                    <li><marcador class="resaltado18">Descarga de software:</marcador> Muchos programas y actualizaciones de software se distribuyen mediante servidores FTP, lo que permite a los usuarios descargar los archivos necesarios de forma rápida y segura.</li>
+                    <li><marcador class="resaltado18">Copia de seguridad de datos:</marcador> Las copias de seguridad y restauraciones de datos pueden realizarse utilizando FTP para transferir grandes volúmenes de información de manera confiable.</li>
                 </ul>
                 <div class="blog-image">
                     <img src="media/ftp3.jpg" alt="">
