--- a/network/http.html
+++ b/network/http.html
@@ -47,10 +47,10 @@
                 </div>
                 <h2>Códigos de estado de HTTP</h2>
                 <p>Los códigos de estado son parte esencial de las respuestas HTTP y proporcionan información sobre el resultado de la solicitud. Algunos de los códigos de estado más comunes son:</p>
-                <ul style="list-style-type: circle;">
-                <li>200 OK: La solicitud se completó con éxito, y el recurso solicitado se ha entregado correctamente.</li>
-                <li>404 Not Found: El recurso solicitado no se encuentra en el servidor.</li>
-                <li>500 Internal Server Error: Se produjo un error interno en el servidor al procesar la solicitud.</li>
+                <ul>
+                <li><marcador class="resaltado4">200 OK:</marcador> La solicitud se completó con éxito, y el recurso solicitado se ha entregado correctamente.</li>
+                <li><marcador class="resaltado4">404 Not Found:</marcador> El recurso solicitado no se encuentra en el servidor.</li>
+                <li><marcador class="resaltado4">500 Internal Server Error:</marcador> Se produjo un error interno en el servidor al procesar la solicitud.</li>
                 </ul>
                 <h2>HTTP y seguridad</h2>
                 <p>Aunque HTTP es un protocolo ampliamente utilizado, presenta algunas vulnerabilidades de seguridad. Debido a que los datos se transfieren en texto claro, los hackers pueden interceptar y leer la información enviada entre el cliente y el servidor. Para abordar este problema, se ha desarrollado HTTPS (HTTP Seguro), que utiliza una capa de seguridad SSL/TLS para cifrar los datos y garantizar una comunicación segura y privada.</p>
