--- a/network/arp.html
+++ b/network/arp.html
@@ -51,23 +51,23 @@
                 <h2>Funcionamiento de ARP</h2>
                 <p>ARP resuelve la diferencia entre las direcciones IP y las direcciones MAC. Cuando un dispositivo necesita enviar datos a otro dispositivo en la misma red, debe conocer la dirección MAC correspondiente para entregar el paquete de manera adecuada. Aquí está cómo funciona el proceso de resolución de dirección en ARP:</p>
                 <ol>
-                    <li>Solicitud ARP (ARP Request): Cuando un dispositivo en una red necesita encontrar la dirección MAC correspondiente a una dirección IP destino, envía una solicitud ARP. La solicitud ARP se envía como un mensaje de broadcast dentro de la red local. El mensaje de broadcast se dirige a todas las máquinas en la red, y esto se hace utilizando la dirección MAC de broadcast, que es FF:FF:FF:FF:FF:FF. La solicitud ARP contiene la dirección IP del dispositivo emisor y la dirección IP destino para la que se busca la dirección MAC.</li>
-                    <li>Respuesta ARP (ARP Reply): La máquina con la dirección IP destino en la solicitud ARP recibe el mensaje de broadcast y responde con un mensaje ARP de respuesta. Esta respuesta contiene la dirección IP y la dirección MAC de la máquina emisora. El mensaje de respuesta ARP se envía directamente al dispositivo emisor, no como un broadcast.</li>
-                    <li>Actualización de la tabla ARP: Cuando el dispositivo emisor recibe la respuesta ARP, actualiza su tabla ARP con la dirección MAC correspondiente a la dirección IP destino. Esta tabla ARP es una tabla de caché que almacena las asociaciones entre direcciones IP y direcciones MAC para agilizar futuras comunicaciones.</li>
+                    <li><marcador class="resaltado6">Solicitud ARP (ARP Request):</marcador> Cuando un dispositivo en una red necesita encontrar la dirección MAC correspondiente a una dirección IP destino, envía una solicitud ARP. La solicitud ARP se envía como un mensaje de broadcast dentro de la red local. El mensaje de broadcast se dirige a todas las máquinas en la red, y esto se hace utilizando la dirección MAC de broadcast, que es FF:FF:FF:FF:FF:FF. La solicitud ARP contiene la dirección IP del dispositivo emisor y la dirección IP destino para la que se busca la dirección MAC.</li>
+                    <li><marcador class="resaltado6">Respuesta ARP (ARP Reply):</marcador> La máquina con la dirección IP destino en la solicitud ARP recibe el mensaje de broadcast y responde con un mensaje ARP de respuesta. Esta respuesta contiene la dirección IP y la dirección MAC de la máquina emisora. El mensaje de respuesta ARP se envía directamente al dispositivo emisor, no como un broadcast.</li>
+                    <li><marcador class="resaltado6">Actualización de la tabla ARP:</marcador> Cuando el dispositivo emisor recibe la respuesta ARP, actualiza su tabla ARP con la dirección MAC correspondiente a la dirección IP destino. Esta tabla ARP es una tabla de caché que almacena las asociaciones entre direcciones IP y direcciones MAC para agilizar futuras comunicaciones.</li>
                 </ol>
                 <p>Es importante mencionar que las tablas ARP tienen una duración limitada. Esto se debe a que las direcciones IP pueden cambiar con el tiempo debido a reconfiguraciones de red o movimientos de dispositivos. Cuando una entrada en la tabla ARP expira, el dispositivo debe repetir el proceso ARP para actualizar la información.</p>
                 <div class="blog-image-grande">
                     <img src="media/protocolo7.png" alt="">
                 </div>                
                 <h2>Ejemplo de ARP</h2>
-                <ul style="list-style-type: square;">
-                    <li>Solicitud ARP</li>
+                <ul>
+                    <h6>Solicitud ARP</h6>
                     <p>Supongamos que el dispositivo con dirección IP 192.168.1.10 necesita la dirección MAC del dispositivo con dirección IP 192.168.1.20:</p>
                     <ol>
                         <li>El dispositivo 192.168.1.10 envía una solicitud ARP preguntando por la dirección MAC asociada a 192.168.1.20.</li>
                         <li>El dispositivo 192.168.1.20, al estar en la misma red, responde con su dirección MAC.</li>
                     </ol>
-                    <li>Respuesta ARP</li>
+                    <h6>Respuesta ARP</h6>
                     <p>Supongamos que el dispositivo con dirección IP 192.168.1.20 responde a la solicitud ARP:</p>
                     <ol>
                         <li>El dispositivo 192.168.1.20 recibe la solicitud ARP de 192.168.1.10.</li>
@@ -79,23 +79,23 @@
                 </div>
                 <h2>Estructura del Encabezado ARP</h2>
                 <p>El encabezado ARP consta de varios campos que permiten la resolución de direcciones de manera efectiva. Aquí están los campos principales del encabezado ARP:</p>
-                <ul style="list-style-type: circle;">
-                    <li>Tipo de hardware (Hardware Type): Indica el tipo de medio de transmisión utilizado en la red, como Ethernet.</li>
-                    <li>Tipo de protocolo (Protocol Type): Indica el protocolo de capa superior que se utilizará, generalmente IPv4.</li>
-                    <li>Longitud de dirección de hardware (Hardware Address Length): Especifica la longitud de las direcciones físicas en bytes.</li>
-                    <li>Longitud de dirección de protocolo (Protocol Address Length): Especifica la longitud de las direcciones IP en bytes.</li>
-                    <li>Código de operación (Operation Code): Indica si la solicitud ARP es una solicitud (1) o una respuesta (2).</li>
-                    <li>Dirección de hardware del remitente (Sender Hardware Address): Contiene la dirección MAC del remitente.</li>
-                    <li>Dirección de protocolo del remitente (Sender Protocol Address): Contiene la dirección IP del remitente.</li>
-                    <li>Dirección de hardware del destino (Target Hardware Address): Se llena solo en las respuestas ARP, contiene la dirección MAC del destinatario.</li>
-                    <li>Dirección de protocolo del destino (Target Protocol Address): Contiene la dirección IP del destinatario.</li>
+                <ul>
+                    <li><marcador class="resaltado4">Tipo de hardware (Hardware Type):</marcador> Indica el tipo de medio de transmisión utilizado en la red, como Ethernet.</li>
+                    <li><marcador class="resaltado4">Tipo de protocolo (Protocol Type):</marcador> Indica el protocolo de capa superior que se utilizará, generalmente IPv4.</li>
+                    <li><marcador class="resaltado4">Longitud de dirección de hardware (Hardware Address Length):</marcador> Especifica la longitud de las direcciones físicas en bytes.</li>
+                    <li><marcador class="resaltado4">Longitud de dirección de protocolo (Protocol Address Length):</marcador> Especifica la longitud de las direcciones IP en bytes.</li>
+                    <li><marcador class="resaltado4">Código de operación (Operation Code):</marcador> Indica si la solicitud ARP es una solicitud (1) o una respuesta (2).</li>
+                    <li><marcador class="resaltado4">Dirección de hardware del remitente (Sender Hardware Address):</marcador> Contiene la dirección MAC del remitente.</li>
+                    <li><marcador class="resaltado4">Dirección de protocolo del remitente (Sender Protocol Address):</marcador> Contiene la dirección IP del remitente.</li>
+                    <li><marcador class="resaltado4">Dirección de hardware del destino (Target Hardware Address):</marcador> Se llena solo en las respuestas ARP, contiene la dirección MAC del destinatario.</li>
+                    <li><marcador class="resaltado4">Dirección de protocolo del destino (Target Protocol Address):</marcador> Contiene la dirección IP del destinatario.</li>
                 </ul>
                 <div class="blog-image-grande">
                     <img src="media/protocolos5.png" alt="">
                 </div>
                 <h2>Encapsulamiento de los mensajes ARP</h2>
                 <p>En cuanto al encapsulamiento de los mensajes ARP en paquetes IP:</p>
-                <ul style="list-style-type: circle;">
+                <ul >
                     <li>Los mensajes ARP son encapsulados dentro de tramas Ethernet en redes locales.</li>
                     <li>Los mensajes ARP Request y ARP Reply son encapsulados en tramas Ethernet utilizando las direcciones MAC de origen y destino apropiadas.</li>
                     <li>El campo de tipo en la trama Ethernet se establece en el valor correspondiente a ARP (0x0806) para indicar que contiene un mensaje ARP.</li>
@@ -111,14 +111,12 @@
                     </div>
                 </div>
                 <h2>Ataques Relacionados a ARP</h2>
-                <ul style="list-style-type: circle;">
-                    <li>ARP Spoofing (ARP Poisoning): En este ataque, un atacante envía mensajes ARP falsificados a los dispositivos en la red para asociar su dirección MAC con la dirección IP de otro dispositivo legítimo. Esto puede hacer que el tráfico de red pase por el atacante, lo que le permite interceptar y analizar el tráfico. También puede llevar a la suplantación de identidad.</li>
-                    <li>ARP Cache Poisoning: Similar al ARP Spoofing, este ataque implica enviar respuestas ARP falsas a los dispositivos de la red, en un intento de corromper sus tablas de caché ARP. Esto puede causar que los dispositivos legítimos se comuniquen con el atacante en lugar del dispositivo real al que estaban intentando acceder.</li>
-                    <li>ARP DOS (Denial of Service): Los atacantes pueden inundar la red con mensajes ARP falsos o repetidos, lo que puede abrumar las tablas ARP de los dispositivos, causando una degradación del rendimiento o incluso una interrupción completa del tráfico de red.</li>
-                    <li>ARP MiTM (Man-in-the-Middle): En este escenario, el atacante intercepta el tráfico entre dos dispositivos legítimos. Esto se logra al enviar mensajes ARP falsificados a ambas partes, lo que hace que crean que están comunicándose directamente entre sí mientras el atacante actúa como intermediario.</li>
-                    <li>ARP Hijacking: En lugar de interceptar el tráfico, un atacante puede reemplazar la dirección MAC de una máquina legítima en la tabla ARP de un dispositivo objetivo con su propia dirección MAC. Esto permite al atacante recibir el tráfico destinado a la máquina legítima.</li>
-                    <li>ARP-Based VLAN Hopping: En este ataque, el atacante manipula las tablas ARP para moverse entre VLANs a las que normalmente no tendría acceso, lo que puede exponer segmentos de red sensibles.</li>
-                </ul>    
+                <p><marcador class="resaltado2">ARP Spoofing (ARP Poisoning):</marcador> En este ataque, un atacante envía mensajes ARP falsificados a los dispositivos en la red para asociar su dirección MAC con la dirección IP de otro dispositivo legítimo. Esto puede hacer que el tráfico de red pase por el atacante, lo que le permite interceptar y analizar el tráfico. También puede llevar a la suplantación de identidad.</p>
+                <p><marcador class="resaltado2">ARP Cache Poisoning:</marcador> Similar al ARP Spoofing, este ataque implica enviar respuestas ARP falsas a los dispositivos de la red, en un intento de corromper sus tablas de caché ARP. Esto puede causar que los dispositivos legítimos se comuniquen con el atacante en lugar del dispositivo real al que estaban intentando acceder.</p>
+                <p><marcador class="resaltado2">ARP DOS (Denial of Service):</marcador> Los atacantes pueden inundar la red con mensajes ARP falsos o repetidos, lo que puede abrumar las tablas ARP de los dispositivos, causando una degradación del rendimiento o incluso una interrupción completa del tráfico de red.</p>
+                <p><marcador class="resaltado2">ARP MiTM (Man-in-the-Middle):</marcador> En este escenario, el atacante intercepta el tráfico entre dos dispositivos legítimos. Esto se logra al enviar mensajes ARP falsificados a ambas partes, lo que hace que crean que están comunicándose directamente entre sí mientras el atacante actúa como intermediario.</p>
+                <p><marcador class="resaltado2">ARP Hijacking:</marcador> En lugar de interceptar el tráfico, un atacante puede reemplazar la dirección MAC de una máquina legítima en la tabla ARP de un dispositivo objetivo con su propia dirección MAC. Esto permite al atacante recibir el tráfico destinado a la máquina legítima.</p>
+                <p><marcador class="resaltado2">ARP-Based VLAN Hopping:</marcador> En este ataque, el atacante manipula las tablas ARP para moverse entre VLANs a las que normalmente no tendría acceso, lo que puede exponer segmentos de red sensibles.</p>   
                 <div class="blog-image-grande">
                     <img src="media/protocolo6.jpg" alt="">
                 </div>
